ovim/tests/snapshots/snapshot_test__o_command_snapshot.snap
---
source: tests/snapshot_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:7
Lines: 4

Buffer:
line 1
new lin[e]
line 2
line 3
