ovim/tests/snapshots/snapshot_test__o_last_line_no_newline.snap
---
source: tests/snapshot_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:5
Lines: 3

Buffer:
line 1
line 2
line [3]
